[package]
name = "bevy_awesome_debug_camera"
description = "A easy-to-use customizable drop-in free cam for the (awesome) bevy engine"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Paul Bühne"]
repository = "https://github.com/cactusdualcore/bevy_freecam"
homepage = "https://github.com/cactusdualcore/bevy_freecam/blob/main/README.md"
license = "Unlicense"
keywords = ["gamedev", "bevy", "3d", "camera", "freecam"]

[dependencies]
bevy_app = { version = "0.14.0", default-features = false }
bevy_ecs = { version = "0.14.0", default-features = false }
bevy_input = { version = "0.14.0", default-features = false }
bevy_math = { version = "0.14.0", default-features = false }
bevy_reflect = { version = "0.14.0", default-features = false, optional = true }
bevy_render = { version = "0.14", default_features = false }
bevy_time = { version = "0.14.0", default-features = false }
bevy_transform = { version = "0.14.0", default-features = false }
bevy_window = { version = "0.14.0", default-features = false }

[dev-dependencies]
bevy = "0.14.0"

[features]
default = ["bevy_reflect"]
bevy_reflect = ["dep:bevy_reflect"]
